--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	</properties>
 	<!-- Remote changes-->
 	<scm>
-			<url>https://github.com/MADDELAARUNA/ims-project.git</url>
+			<url>https://github.com/MADDELAARUNA/ims-project</url>
 			<connection>scm:git:https://github.com/MADDELAARUNA/ims-project.git</connection>
 			<developerConnection>scm:git:https://github.com/MADDELAARUNA/ims-project.git</developerConnection>
 	  
@@ -128,6 +128,11 @@
 	<build>
 		<finalName>Realtime</finalName>
 		<plugins>
+			<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>2.5.2</version>
+					</plugin>
 		<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
