--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
 	</properties>
 	<!-- Remote changes-->
 	<scm>
-			<url>https://github.com/MADDELAARUNA/ims-project</url>
-			<connection>scm:git:https://github.com/MADDELAARUNA/ims-project.git</connection>
-			<developerConnection>scm:git:https://github.com/MADDELAARUNA/ims-project.git</developerConnection>
+			<url>http://github.com/MADDELAARUNA/ims-project</url>
+			<connection>scm:git:http://github.com/MADDELAARUNA/ims-project.git</connection>
+			<developerConnection>scm:git:http://github.com/MADDELAARUNA/ims-project.git</developerConnection>
 	  
   </scm>
 <!--Manju                    -->                    
