--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>javahome</groupId>
 	<artifactId>Realtime</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.12</version>
+	<version>0.0.13-SNAPSHOT</version>
 	<name>ims Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
@@ -25,7 +25,7 @@
 			<connection>scm:git:https://github.com/MADDELAARUNA/ims-project.git</connection>
 			<developerConnection>scm:git:https://github.com/MADDELAARUNA/ims-project.git</developerConnection>
 	  
-    <tag>Realtime-0.0.12</tag>
+    <tag>HEAD</tag>
   </scm>
 <!--Manju                    -->                    
 		
