--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>javahome</groupId>
 	<artifactId>Realtime</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.16-SNAPSHOT</version>
+	<version>0.0.16</version>
 	<name>ims Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
