--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 	<distributionManagement>
         <repository>
             <id>maven-releases</id>
-            <name>maven-releases</name>
+            <name>central</name>
             <url>http://localhost:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
