--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,11 @@
 		
 	<distributionManagement>
         <repository>
-            <id>maven-central</id>
-            <url>http://localhost:8081/repository/maven-central/</url>
+            <id>maven-releases</id>
+            <url>http://localhost:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>snapshots</id>
+            <id>maven-snapshots</id>
             <url>http://localhost:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement> 
