--- a/pom.xml
+++ b/pom.xml
@@ -136,8 +136,8 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
                </plugin>
 	       <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
+                         <artifactId>maven-deploy-plugin</artifactId>
+                          <version>2.8.2</version>
                 <executions>
                     <execution>
                         <id>default-deploy</id>
@@ -145,6 +145,7 @@
                             <skip>true</skip>
                         </configuration>
                     </execution>
+		    <executions>
 		    </plugin>
 		</plugins>
 	</build>
